[package]
name = "fabric-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Old DB: Erlang uses RocksDB 7.7.3, using 0.19.0 which bundles ~7.4.4
# New DB: Latest Rust crate 0.23.0 which bundles RocksDB 9.0.0+ for migration target
rocksdb = "0.23.0"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"

# For ETF parsing - Erlang Term Format  
# eetf = "0.7"  # Disabled due to API compatibility issues
# We'll implement basic ETF detection instead

[workspace]
# workaround to allow running this crate independently
# even if it is cloned into an umbrella cargo workspace
