[package]
name = "amadeus-fabric-doctor"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.23.0"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
num_cpus = "1.0"
# For snapshot functionality
blake3 = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

eetf = "0.11.0"

[workspace]
